Add crypto and fiat rest api adding the corresponding dto structure with its mappings