@@ -19,10 +19,12 @@ package bisq.api.rest_api.endpoints.payment_accounts;
 
 import bisq.account.AccountService;
 import bisq.account.accounts.Account;
+import bisq.account.accounts.fiat.UserDefinedFiatAccount;
 import bisq.account.payment_method.PaymentMethod;
-import bisq.account.payment_method.fiat.FiatPaymentMethod;
-import bisq.api.dto.DtoMappings;
-import bisq.api.dto.account.fiat.FiatAccountDto;
+import bisq.api.dto.account.PaymentAccountDto;
+import bisq.api.dto.account.fiat.UserDefinedFiatAccountDto;
+import bisq.api.dto.mappings.account.PaymentAccountDtoMapping;
+import bisq.api.dto.mappings.account.fiat.UserDefinedFiatAccountDtoMapping;
 import bisq.api.rest_api.endpoints.RestApiBase;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.media.Content;
@@ -31,7 +33,15 @@ import io.swagger.v3.oas.annotations.parameters.RequestBody;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.validation.Valid;
-import jakarta.ws.rs.*;
+import jakarta.ws.rs.Consumes;
+import jakarta.ws.rs.DELETE;
+import jakarta.ws.rs.GET;
+import jakarta.ws.rs.PATCH;
+import jakarta.ws.rs.POST;
+import jakarta.ws.rs.PUT;
+import jakarta.ws.rs.Path;
+import jakarta.ws.rs.Produces;
+import jakarta.ws.rs.QueryParam;
 import jakarta.ws.rs.container.AsyncResponse;
 import jakarta.ws.rs.container.Suspended;
 import jakarta.ws.rs.core.MediaType;
@@ -41,38 +51,40 @@ import lombok.extern.slf4j.Slf4j;
 import java.util.List;
 import java.util.Optional;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 
+/*
+ * Temporary REST API for fiat-only account management.
+ * This endpoint is planned to be removed once MuSig is enabled and the client
+ * migrates to PaymentAccountsRestApi, which accepts both fiat and crypto accounts.
+ */
 @Slf4j
 @Path("/payment-accounts/fiat")
 @Produces(MediaType.APPLICATION_JSON)
 @Consumes(MediaType.APPLICATION_JSON)
-@Tag(name = "Fiat Payment Accounts API", description = "API for managing fiat payment accounts. Supports all FiatPaymentRail types including CUSTOM (user-defined), SEPA, REVOLUT, ZELLE, and more.")
-public class FiatPaymentAccountsRestApi extends RestApiBase {
+@Tag(name = "User-Defined Fiat Payment Accounts API", description = "API for managing user-defined fiat payment accounts (CUSTOM rail only).")
+public class UserDefinedPaymentAccountsRestApi extends RestApiBase {
     private final AccountService accountService;
 
-    public FiatPaymentAccountsRestApi(AccountService accountService) {
+    public UserDefinedPaymentAccountsRestApi(AccountService accountService) {
         this.accountService = accountService;
     }
 
     @GET
     @Operation(
-            summary = "Get fiat payment accounts",
-            description = "Retrieve all fiat payment accounts",
+            summary = "Get user-defined fiat payment accounts",
+            description = "Retrieve all user-defined fiat payment accounts (CUSTOM rail only)",
             responses = {
-                    @ApiResponse(responseCode = "200", description = "Fiat payment accounts retrieved successfully",
-                            content = @Content(schema = @Schema(implementation = FiatAccountDto.class, type = "array"))),
+                    @ApiResponse(responseCode = "200", description = "User-defined fiat payment accounts retrieved successfully",
+                            content = @Content(schema = @Schema(implementation = PaymentAccountDto.class, type = "array"))),
                     @ApiResponse(responseCode = "500", description = "Internal server error")
             }
     )
-    public Response getPaymentAccounts() {
+    public Response getUserDefinedPaymentAccounts() {
         try {
-            List<FiatAccountDto> accounts = accountService.getAccounts().stream()
-                    .filter(this::isFiatAccount)
+            List<PaymentAccountDto> accounts = accountService.getAccounts().stream()
+                    .filter(this::isUserDefinedAccount)
                     .map(this::convertToDto)
-                    .filter(Optional::isPresent)
-                    .map(Optional::get)
-                    .collect(Collectors.toList());
+                    .toList();
 
             return buildOkResponse(accounts);
         } catch (Exception e) {
@@ -82,31 +94,23 @@ public class FiatPaymentAccountsRestApi extends RestApiBase {
     }
 
     /**
-     * Check if account is a fiat payment account
+     * Check if account is a user-defined fiat payment account.
      */
-    private boolean isFiatAccount(Account<? extends PaymentMethod<?>, ?> account) {
-        return account.getPaymentMethod() instanceof FiatPaymentMethod;
+    private boolean isUserDefinedAccount(Account<? extends PaymentMethod<?>, ?> account) {
+        return account instanceof UserDefinedFiatAccount;
     }
 
-    /**
-     * Convert account to DTO. Returns Optional.empty() for unsupported account types.
-     */
-    private Optional<FiatAccountDto> convertToDto(Account<? extends PaymentMethod<?>, ?> account) {
-        try {
-            return Optional.of(DtoMappings.FiatAccountMapping.fromBisq2Model(account));
-        } catch (IllegalArgumentException e) {
-            log.warn("Unsupported account type: {}", account.getClass().getSimpleName());
-            return Optional.empty();
-        }
+    private PaymentAccountDto convertToDto(Account<? extends PaymentMethod<?>, ?> account) {
+        return PaymentAccountDtoMapping.fromBisq2Model(account);
     }
 
     @GET
     @Operation(
-            summary = "Get selected fiat payment account",
-            description = "Get the currently selected fiat payment account",
+            summary = "Get selected user-defined fiat payment account",
+            description = "Get the currently selected user-defined fiat payment account",
             responses = {
-                    @ApiResponse(responseCode = "200", description = "Selected fiat payment account retrieved successfully",
-                            content = @Content(schema = @Schema(implementation = FiatAccountDto.class))),
+                    @ApiResponse(responseCode = "200", description = "Selected user-defined fiat payment account retrieved successfully",
+                            content = @Content(schema = @Schema(implementation = PaymentAccountDto.class))),
                     @ApiResponse(responseCode = "204", description = "No account selected"),
                     @ApiResponse(responseCode = "500", description = "Internal server error")
             }
@@ -115,13 +119,11 @@ public class FiatPaymentAccountsRestApi extends RestApiBase {
     public Response getSelectedPaymentAccount() {
         try {
             Optional<Account<? extends PaymentMethod<?>, ?>> selectedAccount = accountService.findSelectedAccount();
-            if (selectedAccount.isEmpty() || !isFiatAccount(selectedAccount.get())) {
+            if (selectedAccount.isEmpty() || !isUserDefinedAccount(selectedAccount.get())) {
                 return buildNoContentResponse();
             }
 
-            return convertToDto(selectedAccount.get())
-                    .map(this::buildOkResponse)
-                    .orElse(buildNoContentResponse());
+            return buildOkResponse(convertToDto(selectedAccount.get()));
         } catch (Exception e) {
             log.error("Failed to retrieve selected payment account", e);
             return buildErrorResponse("An unexpected error occurred: " + e.getMessage());
@@ -130,16 +132,16 @@ public class FiatPaymentAccountsRestApi extends RestApiBase {
 
     @POST
     @Operation(
-            summary = "Add new fiat payment account",
-            description = "Create a new fiat payment account. The payment rail type is specified in the request body.",
+            summary = "Add new user-defined fiat payment account",
+            description = "Create a new user-defined fiat payment account (CUSTOM rail only).",
             requestBody = @RequestBody(
-                    description = "Fiat account details including payment rail type, account name, and payload",
+                    description = "User-defined fiat account details (must be UserDefinedFiatAccountDto / CUSTOM)",
                     content = @Content(schema = @Schema(implementation = AddFiatAccountRequest.class))
             ),
             responses = {
-                    @ApiResponse(responseCode = "201", description = "Fiat payment account created successfully",
-                            content = @Content(schema = @Schema(implementation = FiatAccountDto.class))),
-                    @ApiResponse(responseCode = "400", description = "Invalid input or unsupported payment rail"),
+                    @ApiResponse(responseCode = "201", description = "User-defined fiat payment account created successfully",
+                            content = @Content(schema = @Schema(implementation = PaymentAccountDto.class))),
+                    @ApiResponse(responseCode = "400", description = "Invalid input or unsupported account type"),
                     @ApiResponse(responseCode = "500", description = "Internal server error"),
                     @ApiResponse(responseCode = "503", description = "Request timed out")
             }
@@ -151,21 +153,26 @@ public class FiatPaymentAccountsRestApi extends RestApiBase {
             response.resume(buildResponse(Response.Status.SERVICE_UNAVAILABLE, "Request timed out"));
         });
         try {
-            FiatAccountDto accountDto = request.account();
+            PaymentAccountDto accountDto = request.account();
             if (accountDto == null) {
                 asyncResponse.resume(buildErrorResponse(Response.Status.BAD_REQUEST, "Account data is required"));
                 return;
             }
+            if (!(accountDto instanceof UserDefinedFiatAccountDto userDefinedDto)) {
+                asyncResponse.resume(buildErrorResponse(Response.Status.BAD_REQUEST,
+                        "Account must be of type UserDefinedFiatAccountDto"));
+                return;
+            }
 
             try {
-                Account<? extends PaymentMethod<?>, ?> account = DtoMappings.FiatAccountMapping.toBisq2Model(accountDto);
+                UserDefinedFiatAccount account = UserDefinedFiatAccountDtoMapping.toBisq2Model(userDefinedDto);
                 accountService.addPaymentAccount(account);
             } catch (IllegalArgumentException e) {
                 asyncResponse.resume(buildErrorResponse(Response.Status.BAD_REQUEST, e.getMessage()));
                 return;
             }
 
-            asyncResponse.resume(buildResponse(Response.Status.CREATED, accountDto));
+            asyncResponse.resume(buildResponse(Response.Status.CREATED, userDefinedDto));
         } catch (Exception e) {
             asyncResponse.resume(buildErrorResponse("An unexpected error occurred: " + e.getMessage()));
         }
@@ -173,11 +180,11 @@ public class FiatPaymentAccountsRestApi extends RestApiBase {
 
     @DELETE
     @Operation(
-            summary = "Delete fiat payment account",
-            description = "Delete a fiat payment account by account name (provided as query parameter)",
+            summary = "Delete user-defined fiat payment account",
+            description = "Delete a user-defined fiat payment account by account name (provided as query parameter)",
             responses = {
-                    @ApiResponse(responseCode = "204", description = "Fiat payment account successfully deleted"),
-                    @ApiResponse(responseCode = "400", description = "Account is not a fiat payment account"),
+                    @ApiResponse(responseCode = "204", description = "User-defined fiat payment account successfully deleted"),
+                    @ApiResponse(responseCode = "400", description = "Account is not a user-defined fiat payment account"),
                     @ApiResponse(responseCode = "404", description = "Account not found"),
                     @ApiResponse(responseCode = "500", description = "Internal server error"),
                     @ApiResponse(responseCode = "503", description = "Request timed out")
@@ -203,8 +210,8 @@ public class FiatPaymentAccountsRestApi extends RestApiBase {
 
             Account<? extends PaymentMethod<?>, ?> toRemove = result.get();
 
-            if (!isFiatAccount(toRemove)) {
-                asyncResponse.resume(buildErrorResponse(Response.Status.BAD_REQUEST, "Account is not a fiat payment account"));
+            if (!isUserDefinedAccount(toRemove)) {
+                asyncResponse.resume(buildErrorResponse(Response.Status.BAD_REQUEST, "Account is not a user-defined fiat payment account"));
                 return;
             }
 
@@ -217,17 +224,17 @@ public class FiatPaymentAccountsRestApi extends RestApiBase {
 
     @PUT
     @Operation(
-            summary = "Update fiat payment account",
-            description = "Update an existing fiat payment account by replacing it with new data. The account name to update is provided as a query parameter.",
+            summary = "Update user-defined fiat payment account",
+            description = "Update an existing user-defined fiat payment account by replacing it with new data. The account name to update is provided as a query parameter.",
             requestBody = @RequestBody(
-                    description = "Updated fiat account details including payment rail type, account name, and payload",
+                    description = "Updated user-defined fiat account details (must be UserDefinedFiatAccountDto / CUSTOM)",
                     required = true,
                     content = @Content(schema = @Schema(implementation = SaveFiatAccountRequest.class))
             ),
             responses = {
-                    @ApiResponse(responseCode = "204", description = "Fiat payment account updated successfully"),
-                    @ApiResponse(responseCode = "400", description = "Invalid input data or unsupported payment rail"),
-                    @ApiResponse(responseCode = "404", description = "Fiat payment account not found"),
+                    @ApiResponse(responseCode = "204", description = "User-defined fiat payment account updated successfully"),
+                    @ApiResponse(responseCode = "400", description = "Invalid input data or unsupported account type"),
+                    @ApiResponse(responseCode = "404", description = "User-defined fiat payment account not found"),
                     @ApiResponse(responseCode = "500", description = "Internal server error"),
                     @ApiResponse(responseCode = "503", description = "Request timed out")
             }
@@ -245,9 +252,14 @@ public class FiatPaymentAccountsRestApi extends RestApiBase {
                 return;
             }
 
-            FiatAccountDto accountDto = request.account();
+            PaymentAccountDto accountDto = request.account();
             if (accountDto == null) {
                 asyncResponse.resume(buildErrorResponse(Response.Status.BAD_REQUEST, "Account data is required"));
+                return;
+            }
+            if (!(accountDto instanceof UserDefinedFiatAccountDto userDefinedDto)) {
+                asyncResponse.resume(buildErrorResponse(Response.Status.BAD_REQUEST,
+                        "Account must be of type UserDefinedFiatAccountDto"));
                 return;
             }
 
@@ -259,13 +271,13 @@ public class FiatPaymentAccountsRestApi extends RestApiBase {
 
             Account<? extends PaymentMethod<?>, ?> existingAccount = result.get();
 
-            if (!isFiatAccount(existingAccount)) {
-                asyncResponse.resume(buildErrorResponse(Response.Status.BAD_REQUEST, "Account is not a fiat payment account"));
+            if (!isUserDefinedAccount(existingAccount)) {
+                asyncResponse.resume(buildErrorResponse(Response.Status.BAD_REQUEST, "Account is not a user-defined fiat payment account"));
                 return;
             }
 
             try {
-                Account<? extends PaymentMethod<?>, ?> newAccount = DtoMappings.FiatAccountMapping.toBisq2Model(accountDto);
+                UserDefinedFiatAccount newAccount = UserDefinedFiatAccountDtoMapping.toBisq2Model(userDefinedDto);
                 accountService.updatePaymentAccount(accountName, newAccount);
             } catch (IllegalArgumentException e) {
                 asyncResponse.resume(buildErrorResponse(Response.Status.BAD_REQUEST, e.getMessage()));
@@ -281,15 +293,15 @@ public class FiatPaymentAccountsRestApi extends RestApiBase {
 
     @PATCH
     @Operation(
-            summary = "Set selected fiat payment account",
-            description = "Set the currently selected fiat payment account. Pass null or omit selectedAccount to unselect.",
+            summary = "Set selected user-defined fiat payment account",
+            description = "Set the currently selected user-defined fiat payment account. Pass null or omit selectedAccount to unselect.",
             requestBody = @RequestBody(
-                    description = "The fiat payment account to set as selected. Pass null to unselect.",
+                    description = "The user-defined fiat payment account to set as selected. Pass null to unselect.",
                     required = false,
                     content = @Content(schema = @Schema(implementation = SetSelectedFiatAccountRequest.class))
             ),
             responses = {
-                    @ApiResponse(responseCode = "204", description = "Selected fiat payment account set successfully"),
+                    @ApiResponse(responseCode = "204", description = "Selected user-defined fiat payment account set successfully"),
                     @ApiResponse(responseCode = "400", description = "Invalid input data"),
                     @ApiResponse(responseCode = "404", description = "Payment account not found"),
                     @ApiResponse(responseCode = "500", description = "Internal server error")
@@ -298,8 +310,12 @@ public class FiatPaymentAccountsRestApi extends RestApiBase {
     @Path("/selected")
     public Response setSelectedPaymentAccount(@Valid SetSelectedFiatAccountRequest request) {
         try {
-            FiatAccountDto accountDto = request.selectedAccount();
+            PaymentAccountDto accountDto = request.selectedAccount();
             if (accountDto != null) {
+                if (!(accountDto instanceof UserDefinedFiatAccountDto)) {
+                    return buildErrorResponse(Response.Status.BAD_REQUEST,
+                            "Account must be of type UserDefinedFiatAccountDto");
+                }
                 Optional<Account<? extends PaymentMethod<?>, ?>> result = accountService.findAccount(accountDto.accountName());
                 if (result.isEmpty()) {
                     return buildErrorResponse(Response.Status.NOT_FOUND, "Payment account not found");
@@ -307,8 +323,8 @@ public class FiatPaymentAccountsRestApi extends RestApiBase {
 
                 Account<? extends PaymentMethod<?>, ?> foundAccount = result.get();
 
-                if (!isFiatAccount(foundAccount)) {
-                    return buildErrorResponse(Response.Status.BAD_REQUEST, "Account is not a fiat payment account");
+                if (!isUserDefinedAccount(foundAccount)) {
+                    return buildErrorResponse(Response.Status.BAD_REQUEST, "Account is not a user-defined fiat payment account");
                 }
 
                 accountService.setSelectedAccount(foundAccount);
